hphp/test/slow/inout/undefined-method.php.expectf

Fatal error: Call to undefined method C::g() in %sundefined-method.php on line 12
